hotel-booking-microservice/reservation-service/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
  labels:
    app: ${project.artifactId}
    group: ${project.groupId}
    provider: fabric8
    version: ${project.version}
spec:
  template:
    spec:
      containers:
        - env:
            - name: VIRTUAL_LAYER_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: virtual-layer-secret
                   key: username
            - name: VIRTUAL_LAYER_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: virtual-layer-secret
                   key: password
            - name: VDB_NAME
              value: "reservation"
            - name: VIRTUAL_LAYER_SERVICE_HOST
              value: "virtual-layer.hotel-booking-virtual-layer.svc"
            - name: VIRTUAL_LAYER_SERVICE_PORT_JDBC
              value: "31000"
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
            - name: BOOKING_STATE_SERVICE_ENDPOINT
              value: "booking-state-service.hotel-booking-state.svc:8080"
