hotel-booking-microservice/reservation-service/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ${project.artifactId}
  labels:
    app: ${project.artifactId}
    group: ${project.groupId}
    provider: fabric8
    version: ${project.version}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
